microservice-examples/microservice-examples-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: microservice-examples-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: microservice-examples
spec:
  hosts:
    - "*"
  gateways:
    - microservice-examples-gateway
  http:
    - match:
        - uri:
            exact: /service-a
        - uri:
            prefix: /api
      route:
        - destination:
            host: service-a
            port:
              number: 1001
    - match:
        - uri:
            prefix: /api/b
      route:
        - destination:
            host: service-b
            port:
              number: 1002
